# UOX3

./: .dockerignore  .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Makefile.linux  Makefile.mingw  README.md  UOX3.sln  UOX3.vcxproj  UOX3.vcxproj.filters  automake.sh  buildanddatacopy.bat  buildbinary.bat  copybinary.bat  copydata.bat  copysource.bat  doall.bat  jsengine.vcxproj  jsengine.vcxproj.filters  main.bat  pureinstallcopy.bat  readme.txt  uox3.mul  uox3.pro  xcode.txt  zlib.vcxproj  zlib.vcxproj.filters
make/cmake/: CMakeLists.txt  readme.txt
source/: .clang-format  AUTHORS.TXT  CDataList.h  CGump.cpp  CGump.h  CJSEngine.cpp  CJSEngine.h  CJSMapping.cpp  CJSMapping.h  CMakeLists.txt  CPacketReceive.cpp  CPacketReceive.h  CPacketSend.cpp  CPacketSend.h  CResponse.cpp  CResponse.h  ChangeLog  Changelog 2262003.txt  Changelog.txt  Config.h  ConfigOS.h  DataCategory.cpp  DataCategory.hpp  DataSection.cpp  DataSection.hpp  DataSettings.cpp  DataSettings.hpp  Dictionary.cpp  Dictionary.h  EventTimer.cpp  EventTimer.hpp  GenericList.h  HISTORY.TXT  IDXMul.hpp  IP4Address.cpp  IP4Address.hpp  JSEncapsulate.cpp  JSEncapsulate.h  KeyValue.cpp  KeyValue.hpp  (+313 more)
source/configuration/: assistantfeature.cpp  assistantfeature.hpp  clientcfg.cpp  clientcfg.hpp  clientenable.cpp  clientenable.hpp  clientfeature.cpp  clientfeature.hpp  directorylocation.cpp  directorylocation.hpp  expansion.cpp  expansion.hpp  realnumberconfig.cpp  realnumberconfig.hpp  serverconfig.cpp  serverconfig.hpp  serverfeature.cpp  serverfeature.hpp  serverstring.cpp  serverstring.hpp  serverswitch.cpp  serverswitch.hpp  shortvalue.cpp  shortvalue.hpp  spawnfacet.cpp  spawnfacet.hpp  startlocconfig.cpp  startlocconfig.hpp  timersetting.cpp  timersetting.hpp  uintvalue.cpp  uintvalue.hpp  ushortvalue.cpp  ushortvalue.hpp
source/expired/: ConfigOS.h  Prerequisites.h  UOXStdHeaders.h  cAccountClass.cpp  cAccountClass.h  cVersionClass.cpp  cVersionClass.h  cserverdata.cpp  cweather.cpp  uox3.h
source/mozilla/js/: README
source/mozilla/js/src/: jslibmath.h
source/network/: networkmgr.cpp  networkmgr.hpp
source/other/: global.cpp  global.hpp  uoxglobal.cpp  uoxglobal.hpp  uoxversion.cpp  uoxversion.hpp
source/subsystem/: account.cpp  account.hpp  console.cpp  console.hpp  serverdata.cpp  serverdata.hpp
source/type/: clientversion.cpp  clientversion.hpp  era.cpp  era.hpp  servertime.cpp  servertime.hpp  startlocation.cpp  startlocation.hpp  uotime.cpp  uotime.hpp  weather.cpp  weather.hpp
source/uodata/: artmap.cpp  artmap.hpp  hash.cpp  hash.hpp  mapsize.cpp  mapsize.hpp  multicollection.cpp  multicollection.hpp  terrainmap.cpp  terrainmap.hpp  tile.cpp  tile.hpp  tileinfo.cpp  tileinfo.hpp  uoflag.cpp  uoflag.hpp  uomap.cpp  uomap.hpp  uomgr.cpp  uomgr.hpp  uop.cpp  uop.hpp  uotile.cpp  uotile.hpp  uoxtile.cpp  uoxtile.hpp  uoxuoadapter.cpp  uoxuoadapter.hpp
source/utility/: buffer.cpp  buffer.hpp  filemap.cpp  filemap.hpp  ip4util.cpp  ip4util.hpp  neterror.hpp  netsocket.cpp  netsocket.hpp  nettype.hpp  netutil.cpp  netutil.hpp  strutil.hpp
spidermonkey/: .gitignore  CMakeLists.txt  README.md  SpiderMonkey.sln  config.mk  js-config.h  js32.vcxproj  js32.vcxproj.filters  jsapi.cpp  jsapi.h  jsautokw.h  jsautooplen.h  jsbuiltins.cpp  jsconfig.mk  jsfun.cpp  jsgc.cpp  jskwgen.vcxproj  jsnum.h  jsobj.cpp  jsparse.cpp  jsproxy.cpp  jspubtd.h  jsregexp.cpp  jsscope.h  jsscopeinlines.h  jsstr.cpp  jstracer.cpp  jstypedarray.cpp  jswin.h  jsxml.cpp  mymake.bat
spidermonkey/buildmethods/visualstudio-2022/jscript/: jscript.vcxproj
spidermonkey/editline/: editline.c
spidermonkey/fdlibm/: CMakeLists.txt  fdlibm.vcxproj
spidermonkey/fdlibm/vs2022/: fdlibm.sln
spidermonkey/ide/cmake/: CMakeLists.txt
spidermonkey/ide/vs2017/: SpiderMonkey.sln  js32.vcxproj  js32.vcxproj.filters  jskwgen.vcxproj  jskwgen.vcxproj.filters  note-about-jskwgen.txt
spidermonkey/ide/vs2022/: spidermonkey.sln
spidermonkey/make/: Spidermonkey.txt
spidermonkey/make/VS2022/: jscript.vcxproj.filters
spidermonkey/make/cmake/: CMakeLists.txt
spidermonkey/nanojit/: avmplus.h  nanojit.h
spidermonkey/pythonStuff/: doIt.ps1
spidermonkey/src/: .gitignore  jsiter.cpp
spidermonkey/src/nanojit/: nanojit.h
spidermonkey/src/pythonStuff/: Dockerfile
spidermonkey/src/v8-dtoa/: platform.cc
spidermonkey/v8-dtoa/: platform.h
spidermonkey/vs2022/: jsengine.sln  jsengine.vcxproj
support/jsengine/: CMakeLists.txt  jsautocfg.h  jsengine.sln  jsengine.vcxproj  jsengine.vcxproj.filters
support/jsengine/jsengine.xcodeproj/: project.pbxproj
support/spidermonkey/fdlibm/: CMakeLists.txt
support/utility/: .gitignore  CMakeLists.txt  EventTimer.hpp  buffer.cpp  buffer.hpp  bytebuffer.cpp  bytebuffer.hpp  color.cpp  color.hpp  configsup.h  console.cpp  console.hpp  filemap.cpp  filemap.hpp  framework.h  header.cpp  header.hpp  image.cpp  image.hpp  ip4addr.cpp  ip4addr.hpp  ip4list.cpp  ip4list.hpp  keyvalue.cpp  keyvalue.hpp  license  mapip.cpp  mapip.hpp  netexcept.cpp  netexcept.hpp  netsupport.cpp  netsupport.hpp  netutil.cpp  netutil.hpp  numinc.hpp  random.hpp  readme.md  secgroup.cpp  secgroup.hpp  section.cpp  (+12 more)
support/utility/utility.xcodeproj/: project.pbxproj
support/zlib/: .gitignore  CMakeLists.txt  README.md  configure  zlib.sln  zlib.vcxproj  zlib.vcxproj.filters
support/zlib/vs2022/: zlib.sln
uoxserver/: CGump.cpp  CJSEngine.cpp  CJSEngine.h  CJSMapping.h  CMakeLists.txt  CPacketReceive.cpp  CPacketSend.cpp  Changelog.txt  ConfigOS.h  Dictionary.cpp  Dictionary.h  IDXMul.cpp  IP4Address.cpp  JSEncapsulate.cpp  MultiMul.cpp  PartySystem.h  SEFunctions.h  StringUtility.cpp  TimeUtility.hpp  UOPInterface.cpp  UOXJSPropertyFuncs.cpp  UOXJSPropertyFuncs.h  UOXStdHeaders.h  archive.cpp  boats.cpp  books.cpp  cAccountClass.cpp  cBaseObject.h  cBaseobject.cpp  cChar.h  cConsole.cpp  cGuild.cpp  cGuild.h  cItem.cpp  cItem.h  cMultiObj.h  cRaces.cpp  cScript.cpp  cServerData.cpp  cServerData.h  (+47 more)
zlib/make/cmake/: CMakeLists.txt  readme.txt
(+2686 files in other folders)
