add_library(uox
	STATIC
		ai.cpp
		archive.cpp
		boats.cpp
		books.cpp
		cAccountClass.cpp
		calcfuncs.cpp
		cBaseobject.cpp
		cChar.cpp
		cConsole.cpp
		cDice.cpp
		cGuild.cpp
		CGump.cpp
		cHTMLSystem.cpp
		cItem.cpp
		CJSEngine.cpp
		CJSMapping.cpp
		cmdtable.cpp
		cMultiObj.cpp
		combat.cpp
		commands.cpp
		CPacketReceive.cpp
		CPacketSend.cpp
		cPlayerAction.cpp
		cRaces.cpp
		CResponse.cpp
		cScript.cpp
		cServerData.cpp
		cServerDefinitions.cpp
		cSocket.cpp
		cSpawnRegion.cpp
		cThreadQueue.cpp
		cVersionClass.cpp
		cWeather.cpp
		Dictionary.cpp
		dist.cpp
		effect.cpp
		fileio.cpp
		findfuncs.cpp
		gumps.cpp
		house.cpp
		items.cpp
		jail.cpp
		JSEncapsulate.cpp
		lineofsight.cpp
		magic.cpp
		mapstuff.cpp
		movement.cpp
		msgboard.cpp
		network.cpp
		npcs.cpp
		ObjectFactory.cpp
		PartySystem.cpp
		pcmanage.cpp
		quantityfuncs.cpp
		queue.cpp
		regions.cpp
		scriptc.cpp
		SEFunctions.cpp
		skills.cpp
		sound.cpp
		speech.cpp
		ssection.cpp
		targeting.cpp
		threadsafeobject.cpp
		townregion.cpp
		trade.cpp
		UOXJSMethods.cpp
		UOXJSPropertyFuncs.cpp
		ustring.cpp
		vendor.cpp
		weight.cpp
		wholist.cpp
		worldmain.cpp
)

target_include_directories(uox
	PUBLIC
		${PROJECT_SOURCE_DIR}/spidermonkey
)

target_link_libraries(uox
	PRIVATE
		js32
		Ws2_32
)

target_compile_definitions(uox
	PRIVATE
		_CRT_NO_VA_START_VALIDATION
)