EXTRA_DIST = autogen.sh

bin_PROGRAMS = uox3

uox3_SOURCES = \
	ai.cpp \
	archive.cpp \
	boats.cpp \
	books.cpp \
	calcfuncs.cpp \
	cmdtable.cpp \
	combat.cpp \
	commands.cpp \
	cAccountClass.cpp \
	cBaseobject.cpp \
	cChar.cpp \
	cConsole.cpp \
	cDice.cpp \
	cGuild.cpp \
	cHTMLSystem.cpp \
	cItem.cpp \
	cMultiObj.cpp \
	cPlayerAction.cpp \
	cRaces.cpp \
	cScript.cpp \
	cServerData.cpp \
	cServerDefinitions.cpp \
	cSocket.cpp \
	cSpawnRegion.cpp \
	ustring.cpp \
	cThreadQueue.cpp \
	cVersionClass.cpp \
	cWeather.cpp \
	dist.cpp \
	door.cpp \
	effect.cpp \
	fileio.cpp \
	findfuncs.cpp \
	globals.cpp \
	gumps.cpp \
	house.cpp \
	items.cpp \
	jail.cpp \
	lineofsight.cpp \
	magic.cpp \
	mapstuff.cpp \
	movement.cpp \
	msgboard.cpp \
	necro.cpp \
	network.cpp \
	npcs.cpp \
	pcmanage.cpp \
	quantityfuncs.cpp \
	queue.cpp \
	regions.cpp \
	scriptc.cpp \
	skills.cpp \
	sound.cpp \
	speech.cpp \
	ssection.cpp \
	targeting.cpp \
	teffect.cpp \
	threadsafeobject.cpp \
	townregion.cpp \
	trade.cpp \
	trigger.cpp \
	uox3.cpp \
	vendor.cpp \
	weight.cpp \
	wholist.cpp \
	worldmain.cpp \
	xgm.cpp \
	CGump.cpp \
	CPacketReceive.cpp \
	CPacketSend.cpp \
	CResponse.cpp \
	Dictionary.cpp \
	JSEncapsulate.cpp \
	ObjectFactory.cpp \
	SEFunctions.cpp \
	UOXJSMethods.cpp \
	UOXJSPropertyFuncs.cpp

uox3_LDADD = js32.a -lpthread
