EXTRA_DIST = autogen.sh

bin_PROGRAMS = uox3

uox3_SOURCES = \
	ai.cpp \
	archive.cpp \
	boats.cpp \
	books.cpp \
	cAccountClass.cpp \
	calcfuncs.cpp \
	cBaseObject.cpp \
	cChar.cpp \
	cConsole.cpp \
	cDice.cpp \
	cGuild.cpp \
	CGump.cpp \
	cHTMLSystem.cpp \
	cItem.cpp \
	cmdtable.cpp \
	cMultiObj.cpp \
	combat.cpp \
	commands.cpp \
	CPacketReceive.cpp \
	CPacketSend.cpp \
	cPlayerAction.cpp \
	cRaces.cpp \
	CResponse.cpp \
	cScript.cpp \
	cServerData.cpp \
	cServerDefinitions.cpp \
	cSocket.cpp \
	cSpawnRegion.cpp \
	cThreadQueue.cpp \
	cVersionClass.cpp \
	cWeather.cpp \
	Dictionary.cpp \
	dist.cpp \
	door.cpp \
	effect.cpp \
	fileio.cpp \
	findfuncs.cpp \
	globals.cpp \
	gumps.cpp \
	house.cpp \
	items.cpp \
	jail.cpp \
	JSEncapsulate.cpp \
	lineofsight.cpp \
	magic.cpp \
	mapstuff.cpp \
	movement.cpp \
	msgboard.cpp \
	necro.cpp \
	network.cpp \
	npcs.cpp \
	ObjectFactory.cpp \
	pcmanage.cpp \
	quantityfuncs.cpp \
	queue.cpp \
	regions.cpp \
	scriptc.cpp \
	SEFunctions.cpp \
	skills.cpp \
	sound.cpp \
	speech.cpp \
	ssection.cpp \
	targeting.cpp \
	teffect.cpp \
	threadsafeobject.cpp \
	townregion.cpp \
	trade.cpp \
	trigger.cpp \
	uox3.cpp \
	UOXJSMethods.cpp \
	UOXJSPropertyFuncs.cpp \
	ustring.cpp \
	vendor.cpp \
	weight.cpp \
	wholist.cpp \
	worldmain.cpp \
	xgm.cpp \

uox3_LDADD = js32.a -lpthread
